[package]
name = "rust_lessons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = {version ="0.12.3", features = ["blocking"]}
opencv = "0.84.5"
